--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="overlay"></div>
+    <div class="stars" aria-hidden="true"></div>
+    <div class="starts2" aria-hidden="true"></div>
+    <div class="stars3" aria-hidden="true"></div>
+    <main class="main">
+        <section class="contact">
+            <h1 class="title">Hello</h1>
+            <h2 class="sub-title">This is Suraj Acharya and currently this website is under construction.</h2>
+        </section>
+    </main>
 </body>
 </html>
