--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="main">
         <section class="contact">
             <h1 class="title">Hello</h1>
-            <h2 class="sub-title">This is Suraj Acharya and currently this website is under construction.</h2>
+            <h2 class="sub-title">This is Suraj Acharya and something exciting is brewing.</h2>
         </section>
     </main>
 </body>
